--- a/assets/sass/layout/_common.scss
+++ b/assets/sass/layout/_common.scss
@@ -33,7 +33,7 @@
     
     .content {
         float: right;
-        width: 70%;
+        width: 68%;
         border-left: 1px dotted #ccc;
         padding-left: px(20);
         padding-bottom: px(40);
@@ -41,7 +41,7 @@
     
     .info {
         float: left;
-        width: 27%;
+        width: 30%;
         margin-top: 0;
         border-top: 0;
     }
